<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DMS</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="dms_add_user">Add user</string>
    <string name="add_new_user_name">Name</string>
    <string name="add_user_name_hint">Enter your user name</string>
    <string name="add_user_doctor_name">Your doctors name:</string>
    <string name="add_user_doctor_num">Your doctors phone number</string>
    <string name="add_user_doctor_num_hint">e.g. 070 111 222</string>
    <string name="add_user_normal_glucose">What is your normal glucose level?</string>
    <string name="add_user_example_glucose_level">e.g. from 80 to 140</string>
    <string name="add_user_save_btn">Save</string>
    <string name="user_picture">User photo</string>
    <string name="add_user_ssn">Your social security number</string>
    <string name="add_user_ssn_hint">Enter your SSN</string>
    <string name="add_user_image_btn_desc">Search contacts</string>
    <string name="add_user_from_et">From</string>
    <string name="add_user_to_et">To</string>
    <string name="alert_dialog_options_title">Options</string>
    <string name="login_toast_add_new_user_negative">You cannot add a new user. Please delete another user first.</string>
    <string name="drawer_open">It is Open!</string>
    <string name="drawer_close">It is Closed!</string>
    <string name="glucose_note">You have not entered any measurements today! If you have not taken any, please do it now and enter your results.</string>
<<<<<<< HEAD
    <string name="glucose_mg_dl">mg/dL</string>
    <string name="glucose_submit">Submit</string>
    <string name="exercise_message">You haven\'t exercised today!</string>
    <string name="exercise_duration">Duration:</string>
    <string name="exercise_hint">e.g. 30</string>
    <string name="exercise_mins">mins</string>
    <string name="exercise_type">Type of workout:</string>
    <string name="exercise_radio_walk">Walk</string>
    <string name="exercise_radio_jog">Jog</string>
    <string name="exercise_radio_run">Run</string>
    <string name="exercise_radio_swim">Swim</string>
    <string name="exercise_radio_bicycle">Bicycle</string>
    <string name="exercice_btn_ok">OK</string>
    <string name="exercice_btn_add_exercise">ADD EXERCISE</string>

=======
	<string name="glucose_mg_dl">mg/dL</string>
	<string name="glucose_submit">Submit</string>
	<string name="exercise_message">You haven\'t exercised today!</string>
	<string name="exercise_duration">Duration:</string>
	<string name="exercise_hint">e.g. 30</string>
	<string name="exercise_mins">mins</string>
	<string name="exercise_type">Type of workout:</string>
	<string name="exercise_radio_walk">Walking</string>
	<string name="exercise_radio_jog">Jogging</string>
	<string name="exercise_radio_run">Running</string>
	<string name="exercise_radio_swim">Swimming</string>
	<string name="exercise_radio_bicycle">Bicycle</string>
	<string name="exercice_btn_ok">OK</string>
>>>>>>> 13c7549c2807e307fa36a564c0276ae034d1372e
</resources>