<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    android:paddingTop="10dp" >

    <LinearLayout
        android:id="@+id/exercise_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.9"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="fill"
            android:text="@string/exercise_message"
            android:textColor="@color/red" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/exercise_duration_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/exercise_duration"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ecercise_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="2"
                android:hint="@string/exercise_hint"
                android:inputType="number" />

            <TextView
                android:id="@+id/exercise_mins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/exercise_mins" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/exercise_type"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/exercise_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/radio_walk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercise_radio_walk" />

            <RadioButton
                android:id="@+id/radio_jog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercise_radio_jog" />

            <RadioButton
                android:id="@+id/radio_run"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercise_radio_run" />

            <RadioButton
                android:id="@+id/radio_swim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercise_radio_swim" />

            <RadioButton
                android:id="@+id/radio_bicycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercise_radio_bicycle" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/exercise_btn_ok"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/buttons"
        android:text="@string/exercice_btn_ok" />

</RelativeLayout>