<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dms_padding" >

        <TextView
            android:id="@+id/add_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_user_name" />

        <EditText
            android:id="@+id/add_user_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_user_name_hint" />

        <TextView
            android:id="@+id/add_user_ssn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Your SSN:" />

        <EditText
            android:id="@+id/add_user_ssn_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter your SSN" />

        <TextView
            android:id="@+id/add_user_doctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/add_user_doctor_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/add_user_doctor_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="5"
                android:inputType="text"
                android:singleLine="true" />

            <ImageButton
                android:id="@+id/search_doctor_from_contacts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="Search"
                android:onClick="getContact"
                android:src="@android:drawable/ic_menu_search" />
        </LinearLayout>

        <TextView
            android:id="@+id/add_user_doctor_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/add_user_doctor_num" />

        <EditText
            android:id="@+id/add_user_doctor_number_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_user_doctor_num_hint"
            android:inputType="phone" />

        <TextView
            android:id="@+id/add_user_normal_glucose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/add_user_normal_glucose" />

        <TextView
            android:id="@+id/add_user_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_user_example_glucose_level" />

        <LinearLayout
            android:id="@+id/add_user_glucose_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dms_padding" >

            <EditText
                android:id="@+id/add_user_low"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="4"
                android:hint="From"
                android:inputType="number" >
            </EditText>

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/black" />

            <EditText
                android:id="@+id/add_user_high"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="4"
                android:hint="To"
                android:inputType="number" >
            </EditText>
        </LinearLayout>

        <Button
            android:id="@+id/add_user_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="save"
            android:text="@string/add_user_save_btn" />
    </LinearLayout>

</ScrollView>