<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingTop="10dp" >

    <LinearLayout
        android:id="@+id/glucose_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.9"
        android:background="@color/grey"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:paddingBottom="5dp"
            android:singleLine="false"
            android:text="@string/glucose_note"
            android:textColor="@color/red" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/glucose_measure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/glucose_mg_dl"
                android:inputType="number" />

            <Button
                android:id="@+id/glucose_measure_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/glucose_submit" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/glucose_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/glucose_form"
        android:background="@android:color/transparent"
        android:divider="@color/red"
        android:dividerHeight="1dp" />

</RelativeLayout>